0.20.36	UNRELEASED

 * Add ``walk_untracked`` argument to ``porcelain.status``.
   (Daniele Trifirò)

0.20.35	2022-03-20

 * Document the ``path`` attribute for ``Repo``.
   (Jelmer Vernooĳ, #854)

0.20.34	2022-03-14

 * Add support for multivars in configuration.
   (Jelmer Vernooĳ, #718)

0.20.33	2022-03-05

 * Fix handling of escaped characters in ignore patterns.
   (Jelmer Vernooĳ, #930)

 * Add ``dulwich.contrib.requests_vendor``. (epopcon)

 * Ensure git config is available in a linked working tree.
   (Jesse Cureton, #926)

0.20.32	2022-01-24

 * Properly close result repository during test.
   (Jelmer Vernooĳ, #928)

0.20.31	2022-01-21

 * Add GitClient.clone(). (Jelmer Vernooĳ, #920)

0.20.30	2022-01-08

0.20.29	2022-01-08

 * Support staging submodules.
   (Jelmer Vernooĳ)

 * Drop deprecated Index.iterblobs and iter_fresh_blobs.
   (Jelmer Vernooĳ)

 * Unify clone behaviour of ``Repo.clone`` and
   ``porcelain.clone``, and add branch parameter for
   clone. (Peter Rowlands, #851)

0.20.28	2022-01-05

 * Fix hook test on Mac OSX / Linux when dulwich is
   not installed system-wide. (Jelmer Vernooĳ, #919)

 * Cope with gecos being unset.
   (Jelmer Vernooĳ, #917)

0.20.27	2022-01-04

 * Allow adding files to repository in pre-commit hook.
   (Jelmer Vernooĳ, #916)

 * Raise SubmoduleEncountered in ``tree_lookup_path``.
   (Jelmer Vernooĳ)

0.20.26	2021-10-29

 * Support os.PathLike arguments to Repo.stage().
   (Jan Wiśniewski, #907)

 * Drop support for Python 3.5.  (Jelmer Vernooĳ)

 * Add ``dulwich.porcelain._reset_file``.
   (Ded_Secer)

 * Add ``Repo.unstage``. (Ded_Secer)

0.20.25	2021-08-23

 * Fix ``dulwich`` script when installed via setup.py.
   (Dan Villiom Podlaski Christiansen)

 * Make default file mask consistent
   with Git. (Dan Villiom Podlaski Christiansen, #884)

0.20.24	2021-07-18

 * config: disregard UTF-8 BOM when reading file.
   (Dan Villiom Podlaski Christiansen)
